// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AQuestion Component Renders properly 1`] = `
<span
  class="question-title"
>
  <!---->
  test-question-title
  <!---->
</span>
`;

exports[`AQuestion Component Renders properly 2`] = `
<span
  class="question-type"
>
  <!---->
  Multiple choice
  <!---->
</span>
`;

exports[`AQuestion Component Renders properly 3`] = `
<span
  class="answer-text"
>
  <!---->
  test-answer-1
  <!---->
</span>
`;

exports[`AQuestion Component Renders properly 4`] = `
<span
  class="percent"
>
  <!---->
  12
  %
</span>
`;

exports[`AQuestion Component Renders properly 5`] = `
<span
  class="answer-text"
>
  <!---->
  test-answer-2
  <!---->
</span>
`;

exports[`AQuestion Component Renders properly 6`] = `
<span
  class="percent"
>
  <!---->
  22
  %
</span>
`;
